--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -44,7 +44,7 @@ vrrp_instance {{ v.instance }} {
 }
 {% endfor %}
 
-{% for g in lvs_director %}
+{% for g in lvs_director_conf %}
 
 {% if g.fwmark is not defined %}
 virtual_server_group {{ g.name }} {
